Fix regex for config values from grabbing too much Also fix buggy underline with links that have linebreaks

--- a/src/styling/text_elements.scss
+++ b/src/styling/text_elements.scss
@@ -7,7 +7,7 @@ span.keybind {
 }
 
 a.text-link {
-  text-decoration: underline 15%;
+  text-decoration: underline 0.3vmin;
 }
 
 span.config-helper {
